--- a/Source/Maps.Core/Maps.Core.csproj
+++ b/Source/Maps.Core/Maps.Core.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <PackageReference Include="Proxoft.Extensions.Options" Version="1.2.0" />
+      <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
