Removed apikey from git

--- a/Source/Samples/Sample.GoogleMap/wwwroot/appsettings.json
+++ b/Source/Samples/Sample.GoogleMap/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
     "GoogleApi": {
-        "ApiKey": "AIzaSyCvyEE_Dh0BHVNC4j9nWE3CxLORxBzgNBI",
+        "ApiKey": "AIza...",
         "Language": "sk",
         "Region": "sk"
     }
