--- a/Source/OpenStreetMap/OpenStreetMap.Maps/OpenStreetMap.Maps.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Maps/OpenStreetMap.Maps.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\..\Maps.Core\Maps.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Markers\" />
+    </ItemGroup>
+
 </Project>
