--- a/Source/Maps.Core/Maps.Core.csproj
+++ b/Source/Maps.Core/Maps.Core.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
       <PackageReference Include="Microsoft.JSInterop" Version="5.0.0" />
       <PackageReference Include="Proxoft.Extensions.Options" Version="1.2.0" />
       <PackageReference Include="System.Reactive" Version="5.0.0" />
