--- a/Source/Samples/Sample.Maps/wwwroot/appsettings.json
+++ b/Source/Samples/Sample.Maps/wwwroot/appsettings.json
@@ -3,5 +3,8 @@
         "ApiKey": "AIza...",
         "Language": "sk",
         "Region": "sk"
+    },
+    "OpenStreetMapApi": {
+        "Language" : "sk"
     }
 }
