--- a/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
@@ -28,4 +28,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
