Geocoding from city / street / streetNumber

--- a/Source/Samples/Sample.Maps/wwwroot/appsettings.json
+++ b/Source/Samples/Sample.Maps/wwwroot/appsettings.json
@@ -5,6 +5,7 @@
         "Region": "sk"
     },
     "OpenStreetMapApi": {
-        "Language" : "sk"
+        "Language": "sk",
+        "ConsoleLogExceptions": true
     }
 }
