--- a/Source/Samples/Sample.Maps/Sample.Maps.csproj
+++ b/Source/Samples/Sample.Maps/Sample.Maps.csproj
@@ -15,6 +15,9 @@
     <ProjectReference Include="..\..\Google\Google.Common\Google.Common.csproj" />
     <ProjectReference Include="..\..\Google\Google.Maps.Hosting\Google.Maps.Hosting.csproj" />
     <ProjectReference Include="..\..\Google\Google.Maps\Google.Maps.csproj" />
+    <ProjectReference Include="..\..\MapBox\MapBox.Common\MapBox.Common.csproj" />
+    <ProjectReference Include="..\..\MapBox\MapBox.Hosting\MapBox.Hosting.csproj" />
+    <ProjectReference Include="..\..\MapBox\MapBox.StaticMaps\MapBox.StaticMaps.csproj" />
     <ProjectReference Include="..\..\Maps.Core\Maps.Core.csproj" />
     <ProjectReference Include="..\..\OpenStreetMap\OpenStreetMap.Hosting\OpenStreetMap.Hosting.csproj" />
     <ProjectReference Include="..\..\OpenStreetMap\OpenStreetMap.Maps\OpenStreetMap.Maps.csproj" />
