--- a/Source/Samples/Sample.Maps/wwwroot/appsettings.json
+++ b/Source/Samples/Sample.Maps/wwwroot/appsettings.json
@@ -7,5 +7,8 @@
     "OpenStreetMapApi": {
         "Language": "sk",
         "ConsoleLogExceptions": true
+    },
+    "MapBoxApi": {
+        "AccessToken": ""
     }
 }
