--- a/Source/Maps.Core/Maps.Core.csproj
+++ b/Source/Maps.Core/Maps.Core.csproj
@@ -9,7 +9,8 @@
         <Company>Proxoft s.r.o.</Company>
         <Product>Maps</Product>
         <PackageIcon>Map.png</PackageIcon>
-        <Version>1.0.0</Version>
+        <PackageProjectUrl>https://github.com/proxoft/Maps</PackageProjectUrl>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
