Moved Maps.Core project under Shared directory

--- a/Source/OpenStreetMap/OpenStreetMap.Geocoding/OpenStreetMap.Geocoding.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Geocoding/OpenStreetMap.Geocoding.csproj
@@ -15,7 +15,7 @@
     </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Maps.Core\Maps.Core.csproj" />
+    <ProjectReference Include="..\..\Shared\Core\Core.csproj" />
     <ProjectReference Include="..\OpenStreetMap.Common\OpenStreetMap.Common.csproj" />
   </ItemGroup>
 
