--- a/Source/Google/Google.Common/Google.Common.csproj
+++ b/Source/Google/Google.Common/Google.Common.csproj
@@ -19,4 +19,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Shared\Core\Core.csproj" />
+    </ItemGroup>
+
 </Project>
