--- a/Source/Google/Google.Geocoding/Google.Geocoding.csproj
+++ b/Source/Google/Google.Geocoding/Google.Geocoding.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -24,7 +24,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Maps.Core\Maps.Core.csproj" />
       <ProjectReference Include="..\Google.Common\Google.Common.csproj" />
     </ItemGroup>
 
