--- a/Source/MapBox/MapBox.StaticMaps/MapBox.StaticMaps.csproj
+++ b/Source/MapBox/MapBox.StaticMaps/MapBox.StaticMaps.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Maps.Core\Maps.Core.csproj" />
+      <ProjectReference Include="..\..\Shared\Core\Core.csproj" />
       <ProjectReference Include="..\MapBox.Common\MapBox.Common.csproj" />
     </ItemGroup>
 
