--- a/Source/Shared/Core/Core.csproj
+++ b/Source/Shared/Core/Core.csproj
@@ -10,11 +10,11 @@
         <Product>Maps</Product>
         <PackageIcon>Map.png</PackageIcon>
         <PackageProjectUrl>https://github.com/proxoft/Maps</PackageProjectUrl>
-        <Version>1.3.0</Version>
+        <Version>0.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <None Include="..\Map.png">
+      <None Include="..\..\Map.png">
         <Pack>True</Pack>
         <PackagePath></PackagePath>
       </None>
