own Directory.Build.Props per Map provider

--- a/Source/OpenStreetMap/OpenStreetMap.Common/OpenStreetMap.Common.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Common/OpenStreetMap.Common.csproj
@@ -1,7 +1,3 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <Version>1.1.1</Version>
-    </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 </Project>
