--- a/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
@@ -1,8 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <Version>1.1.1</Version>
-    </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
       <ProjectReference Include="..\OpenStreetMap.Common\OpenStreetMap.Common.csproj" />
