--- a/Source/Google/Directory.Build.props
+++ b/Source/Google/Directory.Build.props
@@ -1,6 +1,7 @@
 ﻿<Project>
     <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
     <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
         <Version>0.1.0</Version>
     </PropertyGroup>
 </Project>
