--- a/Source/Core/Directory.Build.props
+++ b/Source/Core/Directory.Build.props
@@ -2,6 +2,7 @@
     <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Version>0.10.1</Version>
     </PropertyGroup>
 </Project>
