--- a/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
@@ -4,6 +4,10 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Assets\circle.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Assets\polyline.js">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
