leaflet.js and css embeded in resource dll

--- a/Source/OpenStreetMap/OpenStreetMap.Maps/OpenStreetMap.Maps.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Maps/OpenStreetMap.Maps.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\OpenStreetMap.Common\OpenStreetMap.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\" />
+    </ItemGroup>
+
 </Project>
