--- a/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
@@ -1,4 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+    <PropertyGroup>
+        <IsPackable>true</IsPackable>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <!--<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />-->
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0" />
+    </ItemGroup>
+    
   <ItemGroup>
     <None Remove="Assets\Leaflet\Images\layers-2x.png" />
     <None Remove="Assets\Leaflet\Images\layers.png" />
@@ -45,9 +54,6 @@
     <EmbeddedResource Include="Assets\Leaflet\leaflet.js.map" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0" />
-  </ItemGroup>
+  
 
 </Project>
