--- a/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.StaticResources/OpenStreetMap.StaticResources.csproj
@@ -27,6 +27,10 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Assets\JsScripts\rectangle.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Assets\JsScripts\polyline.js">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
