Parsing of street details

--- a/Source/MapSamples/MapSamples.Client/wwwroot/appsettings.json
+++ b/Source/MapSamples/MapSamples.Client/wwwroot/appsettings.json
@@ -13,7 +13,8 @@
     },
     "OpenStreetMapApi": {
         "Language": "sk",
-        "ConsoleLogExceptions": true
+        "ConsoleLogExceptions": true,
+        "ConsoleTraceLogGeocoder": true
     },
     "MapBoxApi": {
         "AccessToken": ""
