Improved street search

--- a/Source/MapSamples/MapSamples.Client/wwwroot/appsettings.json
+++ b/Source/MapSamples/MapSamples.Client/wwwroot/appsettings.json
@@ -14,7 +14,8 @@
     "OpenStreetMapApi": {
         "Language": "sk",
         "ConsoleLogExceptions": true,
-        "ConsoleTraceLogGeocoder": true
+        "ConsoleTraceLogGeocoder": true,
+        "StreetGeometryMaxIterations": 12
     },
     "MapBoxApi": {
         "AccessToken": ""
