--- a/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
+++ b/Source/OpenStreetMap/OpenStreetMap.Hosting/OpenStreetMap.Hosting.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Core\Core.Api\Core.Api.csproj" />
-      <ProjectReference Include="..\OpenStreetMap.Common\OpenStreetMap.Common.csproj" />
-      <ProjectReference Include="..\OpenStreetMap.Geocoding\OpenStreetMap.Geocoding.csproj" />
-      <ProjectReference Include="..\OpenStreetMap.Maps\OpenStreetMap.Maps.csproj" />
+        <ProjectReference Include="..\..\Core\Core.Api\Core.Api.csproj" />
+        <ProjectReference Include="..\OpenStreetMap.Common\OpenStreetMap.Common.csproj" />
+        <ProjectReference Include="..\OpenStreetMap.Geocoding\OpenStreetMap.Geocoding.csproj" />
+        <ProjectReference Include="..\OpenStreetMap.Maps\OpenStreetMap.Maps.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
